Fixed spacing of title bar.

--- a/julia/poster/custom.css
+++ b/julia/poster/custom.css
@@ -14,7 +14,7 @@ a {
 
 header {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 2fr 4fr;
 }
 
 .level2.single > * {
